bk_ida/gccida/c3/c_finish_then
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_finish_then/src/c-common.c:778:11: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stmt = if_stack_0[if_stack_pointer - 1].if_stmt; 
          ^~~~~~~~~~
          if_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_finish_then/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_finish_then/src/obj/c-common.o] Error 1
